--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
@@ -160,7 +160,7 @@
   }
 
   .component-hero-slide__link {
-    @include btn($style: secondary);
+    @include btn();
   }
 
   .component-hero-slide__footer:not(:empty) {
