--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--section.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--section.scss
@@ -14,13 +14,23 @@
  * Classy Styles
  */
 .component-section {
+  @include container-full-width();
+
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  .component-section__content {
+    @include container();
+    padding: 7.5rem 0 9.625rem;
+  }
+
   // gap for components within sections
   .component-section__content > .paragraph-component:not(:first-child) {
     @include gap-vertical(
       $property: margin,
       $breakpoint: md,
-      $gap-small: $gap-vertical-xsm,
-      $gap-large: $gap-vertical-sm
+      $gap-small: 3.75rem,
+      $gap-large: 9.375rem
     );
   }
 }
