--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--accordion.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--accordion.scss
@@ -53,7 +53,7 @@
     animation-direction: alternate;
     animation-name: fadeIn;
     animation-timing-function: ease-in-out;
-    padding: 1rem 0 1rem !important;
+    padding: 1rem 0 !important;
 
     @include media('>=md') {
       padding: rem(30px) 0 rem(40px) !important;
@@ -75,7 +75,7 @@
 
     .block-webform {
       @include media('>=md') {
-        width: 50%
+        width: 50%;
       }
     }
 
