--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -679,9 +679,7 @@ $mobile-menu-item-button-height: 7rem;
           flex-direction: row;
 
           ul.menu--depth-1 {
-            display: grid;
-            grid-template-columns: repeat(3, auto);
-            grid-column-gap: rem(15px);
+            columns: 3;
           }
         }
       }
@@ -772,7 +770,7 @@ $mobile-menu-item-button-height: 7rem;
         animation-name: headerPanelFade;
         bottom: 0;
         display: block;
-        height: 100vh;
+        height: calc(100vh - #{$header-height});
         left: 0;
         padding: 1.25rem 0 0;
         opacity: 1;
