--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--product-slider.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--product-slider.scss
@@ -66,9 +66,18 @@
       padding: 0;
       opacity: 1;
 
+      &:hover {
+        background-color: $color-black;
+        border-color: $primary-orange;
+      }
+
       &.component-product-slider__button-prev {
         background-image: url('../../../icons/chevron-left-black.svg');
         left: rem(-98px);
+
+        &:hover {
+          background-image: url('../../../icons/chevron-left-molten-orange.svg');
+        }
 
         @include media('<1401px') {
           left: rem(-58px);
@@ -83,6 +92,10 @@
         background-image: url('../../../icons/chevron-right-black.svg');
         right: rem(-98px);
 
+        &:hover {
+          background-image: url('../../../icons/chevron-right-molten-orange.svg');
+        }
+
         @include media('<1400px') {
           right: rem(-58px);
         }
@@ -90,6 +103,11 @@
         @include media('<1336px') {
           display: none;
         }
+      }
+
+      &[aria-disabled="true"] {
+        background-color: $gray-30;
+        border-color: $gray-30;
       }
     }
   }
