Fixing font sizes for dropdown menu

--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -222,22 +222,7 @@ $mobile-menu-item-button-height: 7rem;
       @include media('<=1050px') {
         font-size: rem(15.5px);
       }
-      @include media('<=1000px') {
-        font-size: rem(15px);
-      }
-      @include media('<=950px') {
-        font-size: rem(14.5px);
-      }
-      @include media('<=900px') {
-        font-size: rem(14px);
-      }
-      @include media('<=850px') {
-        font-size: rem(13.5px);
-      }
-      @include media('<=800px') {
-        font-size: rem(13px);
-      }
-      @include media('<=md') {
+      @include media('<lg') {
         font-size: rem(22px);
       }
     }
