--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
@@ -98,6 +98,7 @@
     }
 
     @include media('>md') {
+      filter: drop-shadow(0 0 1rem rgba(0,0,0,0.75));
       margin: 0 1rem;
       max-width: 530px;
       padding: 2.75rem 2rem 1.375rem;
