Add css and conditional for disabled submit button on email signup form

--- a/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
@@ -166,6 +166,12 @@ $footer-bp-mobile: '<sm';
           background-color: $primary-orange;
           color: $black;
         }
+
+        &:disabled {
+          background-color: $gray-30;
+          border-color: $gray-30;
+          color: $black;
+        }
       }
 
     }
