--- a/docroot/modules/custom/gearwrench_core/templates/block--footer-navigation-block.html.twig
+++ b/docroot/modules/custom/gearwrench_core/templates/block--footer-navigation-block.html.twig
@@ -23,7 +23,7 @@
       </div>
       {{ title_suffix }}
       <a href="/" title="{{ 'GEARWRENCH Home'|t }}" rel="home" class="block-footer-navigation-block__footer-logo">
-        {% include directory ~ '/icons/logo.svg' %}
+        {% include directory ~ '/icons/logo-forge-ahead.svg' %}
       </a>
     </header>
     <div{{ content_attributes }}>
