--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
@@ -220,7 +220,7 @@
         }
       }
 
-      &[aria-disabled="true"] {
+      &[aria-disabled='true'] {
         background-color: $gray-30;
         border-color: $gray-30;
       }
