--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--product-slider.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--product-slider.scss
@@ -105,7 +105,7 @@
         }
       }
 
-      &[aria-disabled="true"] {
+      &[aria-disabled='true'] {
         background-color: $gray-30;
         border-color: $gray-30;
       }
