--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
@@ -21,6 +21,7 @@
   @include flex-x(justify-content, flex-end);
   @include flex-x(align-items, center);
 
+  background-color: $white;
   height: 40rem;
   position: relative;
   width: 100vw !important;
