--- a/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/footer.scss
@@ -140,6 +140,9 @@ $footer-bp-mobile: '<sm';
     color: $black;
 
     .region-footer-second__content {
+      .block-webform-block__title {
+        border-bottom: unset;
+      }
 
       input,
       textarea,
