--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--section.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--section.scss
@@ -15,6 +15,7 @@
  */
 .component-section {
   @include container-full-width();
+  padding: 0 1rem;
 
   background-repeat: no-repeat;
   background-size: cover;
@@ -32,5 +33,23 @@
       $gap-small: 3.75rem,
       $gap-large: 9.375rem
     );
+  }
+
+  &.paragraph-component--background-color {
+    position: relative;
+
+    .component-section__content {
+      position: relative;
+      z-index: 1;
+    }
+
+    &:after {
+      @include trbl();
+
+      content: '';
+      height: 100%;
+      width: 100%;
+      z-index: 0;
+    }
   }
 }
