--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--hero-slide.scss
@@ -89,7 +89,7 @@
   .component-hero-slide__content-container {
     background-color: $black;
     box-sizing: border-box;
-    margin: 0 1rem;
+    margin: 0;
     max-width: 75%;
     padding: 1.625rem .875rem 1rem;
     position: relative;
@@ -100,7 +100,6 @@
 
     @include media('>md') {
       filter: drop-shadow(0 0 1rem rgba(0, 0, 0, 0.75));
-      margin: 0 1rem;
       max-width: 530px;
       padding: 2.75rem 2rem 1.375rem;
     }
