Updated input file with button div, updated css for input file

--- a/docroot/themes/custom/gearwrench/templates/form/input--file.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/form/input--file.html.twig
@@ -11,5 +11,9 @@
  */
 #}
 <div class="form-input-file__wrapper">
+  <div type="file" class="form-input-file__button">
+    Choose File
   <input{{ attributes }} />{{ children }}
+
+  </div>
 </div>
