Added webform accordion js, updated css,

--- a/source/themes/custom/gearwrench/styles/base/_inputs.scss
+++ b/source/themes/custom/gearwrench/styles/base/_inputs.scss
@@ -322,6 +322,12 @@ $active-gap: 8px; // the math likes px values
   }
 }
 
+// Product Information Button within form
+.form-input-file-next-button {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 @include media('<md') {
   .webform-flexbox {
     margin-bottom: 0;
