More header styles. Start on Build Doc.

--- a/docroot/modules/custom/gearwrench_core/templates/block--country-switch.html.twig
+++ b/docroot/modules/custom/gearwrench_core/templates/block--country-switch.html.twig
@@ -45,4 +45,6 @@
       <li class="menu-item"><a href="{{ content.mexico_url }}" target="_blank" class="menu-item__link">Mexico</a></li>
     </ul>
   </div>
+
+  <div class="block__pseudo-toggle"></div>
 </section>
