--- a/source/themes/custom/gearwrench/styles/libraries/view/product-listing-grid.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/product-listing-grid.scss
@@ -13,8 +13,19 @@
 /**
  * View
  */
+
 .view-product-listing-grid {
+  .view-content {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: rem(25px);
 
-  background-color: $black;
+    @include media('>=md') {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
 
+    @include media('>=lg') {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+  }
 }
